backend/build_errors.txt
    Checking huynhtu-backend v0.1.0 (C:\Users\huyht\Downloads\huynhtu\backend)
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `urlencoding`
  --> src\routes\download.rs:40:9
   |
40 |         urlencoding::encode(&lang)
   |         ^^^^^^^^^^^ use of unresolved module or unlinked crate `urlencoding`
   |
   = help: if you wanted to use a crate named `urlencoding`, use `cargo add urlencoding` to add it to your `Cargo.toml`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `urlencoding`
  --> src\routes\download.rs:62:9
   |
62 |         urlencoding::encode(&lang)
   |         ^^^^^^^^^^^ use of unresolved module or unlinked crate `urlencoding`
   |
   = help: if you wanted to use a crate named `urlencoding`, use `cargo add urlencoding` to add it to your `Cargo.toml`

warning: unused variable: `env`
  --> src\lib.rs:27:33
   |
27 | pub async fn main(req: Request, env: Env, _ctx: Context) -> Result<Response> {
   |                                 ^^^ help: if this is intentional, prefix it with an underscore: `_env`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0433`.
warning: `huynhtu-backend` (lib) generated 1 warning
error: could not compile `huynhtu-backend` (lib) due to 2 previous errors; 1 warning emitted
